_sass/jekyll-theme-prologue.scss
/* ... */
/* Item */

	.item {
		box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
		margin-bottom: 40px;

		header {
			color: #666;
			text-align: center;
			background: #fff;
			margin: 0;
			padding: 1em;
			font-size: 0.8em;

			h3 {
				font-size: 1em;
			}
		}
	}

/* Icons */

	.icon {
		@include icon(before);
	}

	.icon-r {
		@include icon(before, regular);
	}

	.icon-b {
		@include icon(before, brands);
	}

/* Header */

	#header {
		@include vendor('display', 'flex');
		@include vendor('flex-direction', 'column');
		@include vendor('justify-content', 'space-between');
		background: #222629 url('images/overlay.png');
		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
		color: #fff;
		height: 100%;
		left: 0;
		overflow-y: auto;
		position: fixed;
		text-align: right;
		top: 0;
		width: 375px;

		.top {
			@include vendor('flex-grow', '1');
		}

		.bottom {
			@include vendor('flex-shrink', '0');
			padding: 1.5em 0 0.75em 0;

			> :last-child {
				margin-bottom: 0;
			}
		}

		.icons {
			font-size: 0.8em;
			text-align: center;

			a {
				color: #41484c;
				@include vendor('transition', 'color 0.35s ease-in-out');

				&:hover {
					color: #fff;
				}
			}
		}
	}

	#logo {
		position: relative;
		margin: 1.75em 1.5em 1.5em 1.5em;
		min-height: 48px;
		cursor: default;

		a {
			border: 0;
		}

		h1 {
			position: relative;
			color: #fff;
			font-weight: 600;
			font-size: 1em;
			line-height: 1em;
		}

		p {
			position: relative;
			display: block;
			font-size: 0.6em;
			color: rgba(255, 255, 255, 0.5);
			line-height: 1.25em;
			margin: 0.5em 0 0 0;
		}

		.image {
			position: absolute;
			left: 0;
			top: 0;
		}
	}

	#nav {
		ul {
			list-style: none;
			margin-bottom: 0;
			hr {
				margin: auto 1.5em;
			}

			li {
				a {
					display: block;
					padding: 0.2em 1.5em 0.2em 1.5em;
					color: rgba(255, 255, 255, 0.5);
					text-decoration: none;
					outline: 0;
					border: 0;
					@include vendor('transition', 'none');

					span {
						position: relative;
						display: block;
						font-size: 0.8em;

						&::before {
							position: absolute;
							left: 0;
							color: #41484c;
							text-align: center;
							width: 1.25em;
							line-height: 1.75em;
						}
					}

					&.active {
						background: rgba(0, 0, 0, 0.15);
						box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
						color: #fff;

						span::before {
							color: #3f1e8a;
						}
					}
				}
			}
		}
	}

/* Footer */

	#footer {
		margin-left: 375px;
		text-align: center;
		color: #000;
		background-color: #e5c5fc;
		padding: 1em 0 1em 0;
		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
		font-size: 0.8em;

		.copyright {
			cursor: default;
			margin: 0;

			li {
				display: inline-block;
				line-height: 1em;
				border-left: solid 1px rgba(128, 128, 128, 0.35);
				padding: 0 0 0 0.5em;
				margin: 0 0 0 0.5em;

				&:first-child {
					border-left: 0;
					padding-left: 0;
					margin-left: 0;
				}
			}
		}
	}

/* Main */

	#main {
		margin-left: 375px;
		> section {
			text-align: center;
		}
		> article {
			text-align: left;
			header {
				p {
					font-style: italic;
				}
			}
		}
		
		
		
		> section, article {
			margin: 0;
			overflow: hidden;
			padding: 4em 0;
			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
			background-image: url('images/overlay.png');

			&.dark {
				color: #ddd;
				color: rgba(255, 255, 255, 0.75);

				h2, h3, h4, h5, h6 {
					color: inherit;
				}

				strong {
					color: #fff;
					border-color: inherit;
				}

				a {
					color: #fff;
					border-color: inherit;

					&:hover {
						border-bottom-color: rgba(255, 255, 255, 0);
					}
				}
			}

			&.cover {
				padding: 6em 0;
				position: relative;
				z-index: 0;
				img.back {
					position: absolute;
					object-fit: cover;
					width: 100%;
					height: 100%;
					left: 0;
					top: 0;
					z-index: -1;
				}
			}

			&.shade-one {
				background-color: #FFFFFF;
			}

			&.shade-two {
				background-color: #FFFFFF;
			}

			&.shade-three {
				background-color: #FFFFFF;
			}

			&.shade-four {
				background-color: #FFFFFF;
			}
		}
	}

/* Wide */

	@include breakpoint(wide) {

		/* homepage_header */
		
			div.vidoverlay {
				position:absolute;
				display: table-cell;
				text-align:center;
				vertical-align:middle;
				width:100%;
				height:65%;
				top:35%;
				z-index:1;
				font-family: 'Source Sans Pro', sans-serif;;
				font-size: 4em;
				font-weight: bold;
				color: black;
				-webkit-text-stroke-width: 0.5px;
				-webkit-text-stroke-color: white;
			}
			p.vidsub {
				font-family: 'Source Sans Pro', sans-serif;;
				font-size: 0.5em;
				font-weight: bold;
				color: white;
				line-height: 125%;
				-webkit-text-stroke-color: #3f1e8a;
				-webkit-text-stroke-width: 0.1px;
			}

			.Info_Table {
				background-color: white;
				box-shadow: 5px 5px 5px #888888;
				padding: 1em;
				border: 1px solid #D1D1D1;
				width: 80%;
				margin: auto;
				overflow: auto;
			}
			.Research_Fig {
				max-width:400px;
				float: right; 
				margin:0em 2em 2em 2em;
			}
			
		/* Basic */

			body, input, textarea, select {
				font-size: 17pt;
			}

		/* Header */

			#header {
				width: 300px;
			}

		/* Footer */

			#footer {
				margin-left: 300px;
			}

		/* Main */

			#main {
				margin-left: 300px;
			}

	}
/* ... */

